<resources>
    <string name="app_name">Unitycorn</string>

    <string name="intro_title_1">اینجا؛ شروع ماجرا</string>
    <string name="intro_title_2">هر آن چه که دانستنش لازم است</string>
    <string name="intro_title_3">یونیــ«تی»ــکورن</string>
    <string name="intro_description_1">بازی‌سازی را آسان، سریع و اصولی بیاموزید</string>
    <string name="intro_description_2">آموزش کار با موتور ساخت بازی، کدنویسی بازی و طراحی گرافیکی؛ همگی در یک مجموعه</string>
    <string name="intro_description_3">سفرنامه‌ای به تجربیاتمان از #بازی‌سازی</string>
    <string name="intro_button_before_intro_viewed">بازی‌سازم کن!</string>
    <string name="intro_button_after_intro_viewed">بازگشت</string>
    <string name="intro_toast_message">برای مشاهده‌ی مجدد این توضیحات به بخش «درباره‌ی یونیتیکورن» مراجعه کنید.</string>

    <string name="main_header_slogan">سفرنامه‌ای به تجربیاتمان از بازی‌سازی</string>
    <string name="main_header_title">یونیتیکورن</string>
    <string name="main_header_title_plus">یونیتیکورن +</string>

    <string name="main_menu_search">جستجو</string>
    <string name="main_menu_last_article">آخرین مطلب خوانده شده</string>
    <string name="main_menu_about">درباره‌ی یونیتیکورن</string>
    <string name="main_menu_share">معرفی به دیگران</string>
    <string name="main_menu_upgrade">ارتقا به یونیتیکورن پلاس</string>
    <string name="main_menu_color_picker">ابزار استخر رنگ</string>
    <string name="main_menu_settings">تنظیمات</string>

    <string name="main_menu_last_article_none_error">شما تاکنون مطلبی مطالعه نکرده‌اید.</string>

    <string name="main_menu_color_picker_explanation_toast">با استفاده از این ابزار می‌توانید رنگ‌های مختلف مود RGB را بررسی و ارتباط مقادیر مختلف با کد هگزادسیمال رنگ‌ها را مشاهده نمایید.</string>
    <string name="main_menu_color_picker_positive_action">کپی</string>
    <string name="main_menu_color_picker_negative_action">بازگشت</string>
    <string name="main_menu_color_picker_success_toast_1">مقدار</string>
    <string name="main_menu_color_picker_success_toast_2">در کلیپ بورد کپی شد.</string>

    <string name="main_share_intent_subject">دریافت یونیتیکورن</string>
    <string name="main_share_intent_text">🦄 یونیتیکورن؛ سفرنامه‌ای به تجربیاتمان از بازی‌سازی - دریافت از https://myket.ir/app/ir.unitycorn.app</string>
    <string name="main_share_intent_share_title">اپلیکیشنی که قصد اشتراک در آن دارید را انتخاب کنید.</string>

    <string name="main_press_again_to_exit_snack_bar_text">برای خروج یک بار دیگر کلید بازگشت را لمس کنید.</string>
    <string name="main_press_again_to_exit_snack_bar_rate_action">امتیاز در مایکت</string>
    <string name="main_press_again_to_exit_snack_bar_rate_action_error">مایکت بر روی دستگاه نصب نیست.</string>

    <string name="main_category_gamedev">بازی‌سازی</string>
    <string name="main_category_code">کدنویسی</string>
    <string name="main_category_design">طراحی</string>

    <string name="main_premium_tag">ویژه</string>

    <string name="about_card_title">راه‌های ارتباط با یونیتیکورن</string>
    <string name="about_card_item_website">وبسایت یونیتیکورن</string>
    <string name="about_card_item_email">ارسال ایمیل</string>
    <string name="about_card_item_instagram">اینستاگرام یونیتیکورن</string>
    <string name="about_card_item_telegram">کانال تلگرام یونیتیکورن</string>
    <string name="about_card_item_virgool">وبلاگ یونیتیکورن در ویرگول</string>
    <string name="about_button_open_source">کتابخانه‌های اوپن سورس</string>
    <string name="about_button_intro">معرفی یونیتیکورن</string>
    <string name="about_application">درباره‌ی اپلیکیشن</string>
    <string name="about_creator">نویسنده و توسعه‌دهنده: علی سجادی</string>
    <string name="about_copyright_notice_1">Version 2.0.3 © 2020 All rights reserved</string>
    <string name="about_copyright_notice_2">Shahr-e Kord, Iran</string>
    <string name="about_shake_for_easter_egg">Shake your phone for an Easter egg :)</string>
    <string name="about_easter_egg_toast_1">از عمر یونیتیکورن</string>
    <string name="about_easter_egg_toast_2">روز می‌گذرد.</string>
    <string name="about_support_email_shortcut_name">ارسال ایمیل به پشتیبانی</string>
    <string name="about_support_email_title">پشتیبانی یونیتیکورن</string>
    <string name="about_support_email_attention">توجه: یونیتیکورن به منظور امکان بررسی دقیق‌تر ایمیل‌های پشتیبانی، به انتهای متن ایمیل مدل و ورژن اندروید دستگاهی که اپلیکیشن روی آن نصب شده است را نیز اضافه می‌کند.</string>
    <string name="about_support_email_intent_title">اپلیکیشنی که قصد ارسال ایمیل به وسیله‌ی آن دارید را انتخاب کنید.</string>

    <string name="upgrade_advantage_1">امکان مطالعه‌ی مطالب ویژه</string>
    <string name="upgrade_advantage_2">حذف همیشگی تبلیغات</string>
    <string name="upgrade_advantage_3">امکان ارتقا در سایر دستگاه‌های متصل به حساب مایکت بدون نیاز به پرداخت مجدد</string>
    <string name="upgrade_advantage_4">بازیابی مجدد خرید در صورت پاک شدن اپلیکیشن</string>
    <string name="upgrade_button_text">پرداخت</string>
    <string name="upgrade_toast_already_upgraded">شما قبلاً یونیتیکورن را به نسخه‌ی پلاس ارتقا داده‌اید. بازیابی ارتقا با موفقیت انجام شد.</string>
    <string name="upgrade_toast_payment_cancelled">پرداخت انجام نشد.</string>
    <string name="upgrade_toast_iab_initialize_failed">پیاده‌سازی پرداخت مایکت ناموفق بود</string>
    <string name="upgrade_toast_market_not_found">مایکت بر روی دستگاه نصب نیست.</string>
    <string name="upgrade_toast_payment_error">از برقراری اتصال اینترنت و یا نصب بودن مایکت اطمینان حاصل کنید.</string>
    <string name="upgrade_toast_payment_succeeded">باتشکر از پرداخت شما؛ ارتقا با موفقیت انجام شد.</string>

    <string name="settings_dark_mode_title">حالت تاریک (Dark Mode)</string>
    <string name="settings_font_size_title">اندازه‌ی فونت مطالب</string>
    <string name="settings_font_size_example">یونیتیکورن، سفرنامه‌ای به تجربیاتمان از بازی‌سازی</string>
    <string name="settings_distinct_unread_title">متمایز کردن مطالب خوانده نشده</string>
    <string name="settings_distinct_unread_description">فعال بودن این گزینه باعث می‌شود مطالب خوانده نشده در صفحه‌ی اصلی با نقطه‌ی قرمزی در کنارشان متمایز شوند. همچنین تعداد مطالب خوانده نشده‌ی هر دسته نیز در کنار دسته نمایش داده می‌شود.</string>
    <string name="settings_sticky_notification_title">چسبان کردن نوتیفیکیشن‌های بوکمارک</string>
    <string name="settings_sticky_notification_description">در حالت عادی نوتیفیکیشن‌های بوکمارک یونیتیکورن با swipe شدن و یا clear کردن نوتیفیکیشن بار اندروید از بین می‌روند. در صورت فعال کردن این گزینه نوتیفیکیشن‌های بوکمارک به صورت چسبان درآمده که تنها راه حذفشان لمس آن‌ها و وارد شدن به صفحه‌ی مطلب خواهد بود. این امکان برای جلوگیری از حذف اتفاقی بوکمارک‌ها قابل استفاده است.</string>
    <string name="settings_article_sticky_header_title">چسبان کردن عناوین مطالب</string>
    <string name="settings_article_sticky_header_description">فعال بودن این گزینه باعث می‌شود تیتر مطالب در هنگام اسکرول در بالای صفحه باقی بماند.</string>
    <string name="settings_reset_button_text">بازگشت به تنظیمات اولیه</string>
    <string name="settings_reset_alert_dialog_message">آیا مطمئن هستید؟</string>
    <string name="settings_reset_alert_dialog_positive_button">بله</string>
    <string name="settings_reset_alert_dialog_negative_button">خیر</string>
    <string name="settings_reset_toast_text">تنظیمات ریست شد.</string>

    <string name="upgrade_to_premium_alert_dialog_message">برای مطالعه‌ی مطالب ویژه باید یونیتیکورن را به نسخه‌ی پلاس ارتقا دهید.</string>
    <string name="upgrade_to_premium_alert_dialog_positive_button">توضیحات بیشتر</string>
    <string name="upgrade_to_premium_alert_dialog_negative_button">انصراف</string>

    <string name="article_menu_skip_previous">مطلب قبلی</string>
    <string name="article_menu_skip_next">مطلب بعدی</string>
    <string name="article_menu_read_or_unread">تغییر وضعیت خوانده شدن</string>
    <string name="article_menu_add_to_notification">ساخت نوتیفیکیشن بوکمارک</string>
    <string name="article_menu_show_help">راهنما</string>

    <string name="article_help_title_1">علامت زدن به عنوان خوانده شده</string>
    <string name="article_help_title_2">نوتیفیکیشن بوکمارک</string>
    <string name="article_help_title_3">مطلب قبلی و بعدی</string>
    <string name="article_help_title_4">یک نکته‌ی دیگر</string>
    <string name="article_help_description_1">با استفاده از این گزینه صفحات خوانده شده را علامت‌گذاری کنید.</string>
    <string name="article_help_description_2">با استفاده از این گزینه می‌توانید این مطلب را برای مطالعه در آینده بوکمارک کنید. این بوکمارک در قالب نوتیفیکیشن به شما یادآوری می‌شود.</string>
    <string name="article_help_description_3">با استفاده از گزینه‌های «مطلب قبلی» و «مطلب بعدی» می‌توانید در مطالب این دسته جابجا شوید.</string>
    <string name="article_help_description_4">با لمس کردن بر روی هر کدام از تصاویر موجود در مطالب می‌توانید بر روی آن زوم کرده و یا اقدام به ذخیره کردن آن روی حافظه‌ی دستگاه نمایید.</string>

    <string name="article_help_alert_dialog_message">آیا قصد آشنایی با دکمه‌های تولبار این صفحه را دارید؟</string>
    <string name="article_help_alert_dialog_positive_button">بله</string>
    <string name="article_help_alert_dialog_negative_button">خیر و دیگر نپرس</string>

    <string name="article_notification_channel_name">بوکمارک‌های یونیتیکورن</string>
    <string name="article_notification_channel_description">نوتیفیکیشن‌های بوکمارک یونیتیکورن</string>

    <string name="article_bookmark_removed_toast">مطلب از لیست خوانده‌شده‌ها حذف شد.</string>
    <string name="article_bookmark_added_toast">مطلب به لیست خوانده‌شده‌ها اضافه شد.</string>

    <string name="article_bookmark_notification_title">بوکمارک یونیتیکورن</string>
    <string name="article_bookmark_notification_action_button_text">باز کردن مطلب</string>
    <string name="article_bookmark_notification_added_toast">نوتیفیکیشن بوکمارک اضافه شد.</string>

    <string name="article_there_is_no_previous_article_toast">این مطلب اولین مطلب دسته است.</string>
    <string name="article_there_is_no_next_article_toast">این مطلب آخرین مطلب دسته است.</string>

    <string name="article_tip_badge">نکته</string>

    <string name="image_activity_save_menu_item">ذخیره</string>
    <string name="image_activity_permission_alert_dialog_message">برای ذخیره‌ی تصویر در حافظه‌ی داخلی دستگاه یونیتیکورن به اجازه‌ی نوشتن بر روی حافظه نیاز دارد. آیا مایل به دادن دسترسی فوق به اپلیکیشن هستید؟</string>
    <string name="image_activity_permission_alert_dialog_positive_button">بله</string>
    <string name="image_activity_permission_alert_dialog_negative_button">خیر</string>
    <string name="image_activity_permission_access_denied">دسترسی داده نشد.</string>
    <string name="image_activity_permission_access_granted">تصویر ذخیره شد. مسیر:</string>

    <string name="search_activity_search_bar_hint">جستجو در یونیتیکورن</string>
    <string name="search_activity_no_results_found_message">نتیجه‌ای یافت نشد.</string>
    <string name="search_activity_no_results_found_attention">توجه داشته باشید که جستجو به کاراکتر نیم‌فاصله حساس است.</string>

</resources>
