<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/main_menu_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_last_article"
        android:title="@string/main_menu_last_article" />

    <item
        android:id="@+id/nav_about"
        android:title="@string/main_menu_about" />

    <item
        android:id="@+id/nav_share"
        android:title="@string/main_menu_share" />

    <item
        android:id="@+id/nav_upgrade"
        android:title="@string/main_menu_upgrade" />

    <item
        android:id="@+id/nav_color_picker"
        android:title="@string/main_menu_color_picker" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/main_menu_settings" />

</menu>