<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/skip_previous"
        android:icon="@drawable/article_ic_previous"
        app:showAsAction="never"
        android:title="@string/article_menu_skip_previous" />

    <item
        android:id="@+id/skip_next"
        android:icon="@drawable/article_ic_next"
        app:showAsAction="never"
        android:title="@string/article_menu_skip_next" />

    <item
        android:id="@+id/read_or_unread"
        android:icon="@drawable/article_ic_eye"
        app:showAsAction="always"
        android:title="@string/article_menu_read_or_unread" />

    <item
        android:id="@+id/add_to_notification"
        android:icon="@drawable/article_ic_bookmark"
        app:showAsAction="always"
        android:title="@string/article_menu_add_to_notification" />

    <item
        android:id="@+id/show_help"
        android:icon="@drawable/article_ic_help"
        app:showAsAction="never"
        android:title="@string/article_menu_show_help" />
</menu>