<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/upgrade_layout_container"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.UpgradeActivity">

    <ScrollView
        android:paddingBottom="16dp"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/upgrade_header_image"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/upgrade_activity_header" />

            <TextView
                android:id="@+id/upgrade_title"
                android:paddingTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_menu_upgrade"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/upgrade_material_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/upgrade_advantage_row_1"
                        android:text="@string/upgrade_advantage_1"
                        app:drawableRightCompat="@drawable/ic_check_mark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:drawablePadding="16dp"
                        android:textSize="20sp"
                        android:drawableTint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/upgrade_advantage_row_2"
                        android:text="@string/upgrade_advantage_2"
                        app:drawableRightCompat="@drawable/ic_check_mark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:drawablePadding="16dp"
                        android:textSize="20sp"
                        android:drawableTint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/upgrade_advantage_row_3"
                        android:text="@string/upgrade_advantage_3"
                        app:drawableRightCompat="@drawable/ic_check_mark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:drawablePadding="16dp"
                        android:textSize="20sp"
                        android:drawableTint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/upgrade_advantage_row_4"
                        android:text="@string/upgrade_advantage_4"
                        app:drawableRightCompat="@drawable/ic_check_mark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:drawablePadding="16dp"
                        android:textSize="20sp"
                        android:drawableTint="@color/colorPrimary" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_upgrade_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_gravity="center_horizontal"
                android:paddingStart="64dp"
                android:paddingEnd="64dp"
                android:textColor="@android:color/black"
                app:backgroundTint="@color/colorAccent"
                app:rippleColor="@color/white"
                android:textSize="20sp"
                android:text="@string/upgrade_button_text" />

        </LinearLayout>


    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>